--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="styles/landing_page.css">
 </head>
 <body>
-    
+    <main role="main">
+        <!-- Landing Page -->
+        <div id="landing-page">
+            <div id="game-title">
+                Tic-Tac-Toe
+            </div>
+            <div id="click-to-play">
+                Click screen to play
+            </div>
+        </div>
+
+    </main>
+    <script src="src/landing-page.js"></script>
 </body>
 </html>
